classList methob was added. Cards height on mobile screen was fixed

--- a/src/containers/profile/coursesTab/styles.module.scss
+++ b/src/containers/profile/coursesTab/styles.module.scss
@@ -89,6 +89,7 @@
     background-color: $bcg-gray-dark;
 
     width: 250px;
+    min-height: 250px;
     margin: 15px;
     border-radius: 5px;
     border: none;
