--- a/src/containers/profile/styles.module.scss
+++ b/src/containers/profile/styles.module.scss
@@ -123,6 +123,7 @@
       display: block;
       width: 100%;
       padding: 0px;
+      margin-left: -105%;
       position: absolute;
       overflow-x: auto;
       background-color: $bcg-gray-dark;
